@@ -89,7 +89,8 @@
 	"test_proj_one.h"
 	"../test.h"
 
-1562181859 /home/vld/Projects/c-test-harness/c-test-harness/test.h
+1573388718 /home/vld/Projects/c-test-harness/c-test-harness/test.h
+	<stdio.h>
 	<stdbool.h>
 
 1562181512 source:/home/vld/Projects/c-test-harness/c-test-harness/test_proj_two/proj_two.c
